Validation and error message

--- a/Main_Project/src/main/resources/messages.properties
+++ b/Main_Project/src/main/resources/messages.properties
@@ -1,4 +1,9 @@
-NotEmpty=This field is required.
-duplicate.user.email=Someone already has that email.
-size.user.password=Try one with at least 8 characters.
-diff.user.confirmPassword=These passwords don't match.
+NotEmpty = This field is required.
+
+size.user.name = Please use between 3 and 32 characters
+
+duplicate.user.email = Someone already has registered by this email.
+
+size.user.password = Try one with at least 8 characters.
+
+diff.user.confirmPassword = These passwords do not match.
