Code refactoring, code management

--- a/Main_Project/src/main/resources/messages.properties
+++ b/Main_Project/src/main/resources/messages.properties
@@ -1,9 +1,8 @@
-NotEmpty = This field is required.
-
-size.user.name = Please use between 3 and 32 characters
-
-duplicate.user.email = Someone already has registered by this email.
-
-size.user.password = Try one with at least 8 characters.
-
-diff.user.confirmPassword = These passwords do not match.
+input.empty = This field is required.
+user.name.size = Please use between 3 and 32 characters
+user.email.duplicate = Someone already has registered by this email.
+user.password.size = Try one with at least 8 characters.
+user.confirmPassword.diff = These passwords do not match.
+user.email.notConfirmed = Your email is not verified yet.
+user.email.notFound = This email is not registered yet.
+user.login.invalidCredentials = Your email or password is invalid.
