bid update locking fixes

--- a/Main_Project/src/main/resources/messages.properties
+++ b/Main_Project/src/main/resources/messages.properties
@@ -6,3 +6,4 @@ user.confirmPassword.diff = These passwords do not match.
 user.email.notConfirmed = Your email is not verified yet.
 user.email.notFound = This email is not registered yet.
 user.login.invalidCredentials = Your email or password is invalid.
+bid.price.invalid = "Invalid bid amount. Your amount should be higher than the latest bid."
